[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "save-config"
version = "1.0.1"
description = "macOS configuration backup tool"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "i3oc9i", email = "i3oc9i@icloud.com" }
]

[project.urls]
Repository = "https://github.com/i3oc9i/save_config"

[project.scripts]
save-config = "save_config:main"

[project.optional-dependencies]
dev = ["poethepoet"]

[tool.poe.tasks]
install = "uv tool install . --force --reinstall"
clean = "rm -rf dist/ __pycache__/ *.egg-info/"
build = "uv build"
